--- a/BloodDonation/Views/Accounts/AddNewDonorByBloodBank.cshtml
+++ b/BloodDonation/Views/Accounts/AddNewDonorByBloodBank.cshtml
@@ -1,7 +1,118 @@
-﻿
+﻿@model BloodDonation.Models.CollectBloodMV
 @{
-    ViewBag.Title = "AddNewDonorByBloodBank";
+    ViewBag.Title = "Collect Blood";
 }
 
-<h2>AddNewDonorByBloodBank</h2>
+<style>
+    dt {
+        float: left;
+        clear: left;
+        width: 8em;
+    }
 
+    dd {
+        margin: 0 0 0 9em;
+        padding: 0 0 2.5em 0;
+    }
+</style>
+
+<div class="col-md-8">
+    <div class="contact-form-block">
+        <h2 class="contact-title">Enter Collected Blood Details</h2>
+        @using (Html.BeginForm("AddNewDonorByBloodBank", "Accounts", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <h4>Edit Donor Details</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    Full Name
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.DonorDetails.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DonorDetails.FullName, "", new { @class = "text-danger" })
+                </dd>
+
+                <dt>
+                    Email Address
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.DonorDetails.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DonorDetails.EmailAddress, "", new { @class = "text-danger" })
+                </dd>
+
+                <dt>
+                    Gender
+                </dt>
+                <dd>
+                    <div class="select-style">
+                        @Html.DropDownList("GenderID", null, "-- Gender", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.GenderID, "", new { @class = "text-danger" })
+                    </div>
+                </dd>
+
+                <dt>
+                    Contact №
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.DonorDetails.ContactNo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DonorDetails.ContactNo, "", new { @class = "text-danger" })
+                </dd>
+
+                <dt>
+                    CNIC
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.DonorDetails.CNIC, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DonorDetails.CNIC, "", new { @class = "text-danger" })
+                </dd>
+
+                <dt>
+                    City
+                </dt>
+                <dd>
+                    <div class="select-style">
+                        @Html.DropDownList("CityID", null, "-- Your City", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CityID, "", new { @class = "text-danger" })
+                    </div>
+                </dd>
+
+                <dt>
+                    Address
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.DonorDetails.Location, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DonorDetails.Location, "", new { @class = "text-danger" })
+                </dd>
+            </dl>
+
+            <hr />
+            <h4>Enter Stock Details</h4>
+            <hr />
+
+            <dl class="dl-horizontal">
+                <dt>
+                    Blood Group
+                </dt>
+                <dd>
+                    <div class="select-style">
+                        @Html.DropDownList("BloodGroupID", null, "-- Your Blood Group", new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.BloodGroupID, "", new { @class = "text-danger" })
+                    </div>
+                </dd>
+
+                <dt>
+                    Collect Blood Quantity
+                </dt>
+                <dd>
+                    @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+                </dd>
+            </dl>
+        }
+        <br />
+    </div>
+</div>
